@@ -2,9 +2,11 @@ package com.utc2.domainstore.controller;
 
 import com.utc2.domainstore.entity.database.RoleEnum;
 import com.utc2.domainstore.entity.view.ACCOUNT_STATUS;
+import com.utc2.domainstore.entity.view.Method;
 import com.utc2.domainstore.entity.view.UserModel;
 import com.utc2.domainstore.service.AccountServices;
 import com.utc2.domainstore.service.IAccount;
+import com.utc2.domainstore.view.UserSession;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.collections.transformation.FilteredList;
@@ -26,11 +28,9 @@ public class UserManagerController implements Initializable {
     private List<UserModel> data;
 
     @FXML
-    private Button btAdd, btRemove, btEdit;
-
+    private Button btAdd, btRemove, btEdit, btActive;
     @FXML
     private TableView<UserModel> table;
-
     @FXML
     private TableColumn<UserModel, Integer> colID;
     @FXML
@@ -47,16 +47,25 @@ public class UserManagerController implements Initializable {
     private TableColumn<UserModel, ACCOUNT_STATUS> colStatus;
     @FXML
     private TextField tfSearch;
+    @FXML
+    private ComboBox<String> cbStatus, cbRole;
 
     @FXML
     private void onHandleButton(ActionEvent e) {
         if (e.getSource() == btAdd) {
             // Handle add user logic
+            handleAddUser();
         } else if (e.getSource() == btRemove) {
             // Handle remove user logic
             handleRemoveUser();
         } else if (e.getSource() == btEdit) {
             // Handle edit user logic
+            handleEditUser();
+        } else if (e.getSource() == btActive) {
+            // Handle active user logic
+            // Logic to activate selected users
+            // After activating, refresh the table
+            handleActiveUser();
         }
     }
 
@@ -68,6 +77,10 @@ public class UserManagerController implements Initializable {
     }
 
     private void initTable() {
+        // Khởi tạo giá trị cho comboBox
+        cbStatus.getItems().addAll("", "ACTIVE", "LOCKED");
+        cbRole.getItems().addAll("", "USER", "ADMIN");
+
         // Khởi tạo các cột của bảng
         colID.setCellValueFactory(new PropertyValueFactory<>("ID"));
         colUsername.setCellValueFactory(new PropertyValueFactory<>("name"));
@@ -84,18 +97,10 @@ public class UserManagerController implements Initializable {
         FilteredList<UserModel> filteredData = new FilteredList<>(userModelObservableList, p -> true);
 
         // Đặt listener cho TextField để lọc dữ liệu
-        tfSearch.textProperty().addListener((observable, oldValue, newValue) -> {
-            filteredData.setPredicate(user -> {
-                if (newValue == null || newValue.isEmpty()) {
-                    return true;
-                }
-
-                // So sánh với tên người dùng
-                String lowerCaseFilter = newValue.toLowerCase();
-                return user.getName().toLowerCase().contains(lowerCaseFilter) ||
-                        user.getPhone().toLowerCase().contains(lowerCaseFilter);
-            });
-        });
+        // Lắng nghe thay đổi từ các điều kiện lọc
+        tfSearch.textProperty().addListener((obs, oldVal, newVal) -> updateFilter(filteredData));
+        cbStatus.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> updateFilter(filteredData));
+        cbRole.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> updateFilter(filteredData));
 
         // Đặt nguồn dữ liệu cho TableView
         table.setItems(filteredData);
@@ -118,7 +123,7 @@ public class UserManagerController implements Initializable {
             RoleEnum role = RoleEnum.valueOf(jsonObject.get("role").toString());
             ACCOUNT_STATUS status = jsonObject.getBoolean("is_deleted") ? ACCOUNT_STATUS.LOCKED : ACCOUNT_STATUS.ACTIVE;
 
-            UserModel userModel = new UserModel(id, username, phone, email, personalId, role, status);
+            UserModel userModel = new UserModel(id, username, phone, email, personalId, role, status, "");
 
             newData.add(userModel);
         }
@@ -130,6 +135,8 @@ public class UserManagerController implements Initializable {
         // Open dialog to add a new user
         // Logic to add user
         // After adding, refresh the table
+        CreateAccountController createAccountController = MainController.getInstance().load("/fxml/createAccount.fxml").getController();
+        createAccountController.setMethod(Method.ADD);
     }
 
     private void handleRemoveUser() {
@@ -143,6 +150,15 @@ public class UserManagerController implements Initializable {
             alert.showAndWait();
         } else {
             // Remove selected users from the list
+            if (selectedItem.getID() == UserSession.getInstance().getUserId()) {
+                Alert alert = new Alert(Alert.AlertType.WARNING);
+                alert.setTitle("Invalid Selection");
+                alert.setHeaderText(null);
+                alert.setContentText(bundle.getString("error.lockYourSelf"));
+                alert.showAndWait();
+                return;
+            }
+
             JSONObject request = new JSONObject();
             request.put("user_id", selectedItem.getID());
             IAccount accountService = new AccountServices();
@@ -163,9 +179,65 @@ public class UserManagerController implements Initializable {
             alert.setContentText("Please select exactly one user to edit.");
             alert.showAndWait();
         } else {
-            UserModel selectedUser = selectedUsers.get(0);
+            UserModel selectedUser = selectedUsers.getFirst();
+            selectedUser.setPassword("********");
             // Open edit dialog with selected user data
             // Logic to update the user in the list
+            CreateAccountController createAccountController = MainController.getInstance().load("/fxml/createAccount.fxml").getController();
+            createAccountController.setMethod(Method.UPDATE);
+            createAccountController.setUserModel(selectedUser);
         }
+    }
+
+    private void handleActiveUser() {
+        // Logic to activate selected users
+        ObservableList<UserModel> selectedUsers = table.getSelectionModel().getSelectedItems();
+        if (selectedUsers.isEmpty()) {
+            Alert alert = new Alert(Alert.AlertType.WARNING);
+            alert.setTitle("No Selection");
+            alert.setHeaderText(null);
+            alert.setContentText("Please select at least one user to activate.");
+            alert.showAndWait();
+        } else {
+            for (UserModel user : selectedUsers) {
+                // Logic to activate the user
+                JSONObject request = new JSONObject();
+                request.put("user_id", user.getID());
+                request.put("full_name", user.getName());
+                request.put("phone", user.getPhone());
+                request.put("email", user.getEmail());
+                request.put("ps_id", user.getPsID());
+                request.put("is_deleted", false);
+                IAccount accountService = new AccountServices();
+                JSONObject response = accountService.updateUser(request);
+
+                user.setStatus(ACCOUNT_STATUS.ACTIVE);
+            }
+        }
+        table.refresh();
+    }
+
+    private void updateFilter(FilteredList<UserModel> filteredData) {
+        String searchText = tfSearch.getText().toLowerCase();
+        String selectedStatus = cbStatus.getSelectionModel().getSelectedItem();
+        String selectedRole = cbRole.getSelectionModel().getSelectedItem();
+
+        filteredData.setPredicate(user -> {
+            // 1. Lọc theo từ khóa
+            boolean matchesSearch = (searchText == null || searchText.isEmpty()) ||
+                    user.getName().toLowerCase().contains(searchText) ||
+                    user.getPhone().toLowerCase().contains(searchText);
+
+            // 2. Lọc theo trạng thái
+            boolean matchesStatus = (selectedStatus == null || selectedStatus.isEmpty()) ||
+                    user.getStatus().toString().equalsIgnoreCase(selectedStatus);
+
+            // 3. Lọc theo vai trò
+            boolean matchesRole = (selectedRole == null || selectedRole.isEmpty()) ||
+                    user.getRole().toString().equalsIgnoreCase(selectedRole);
+
+            // Kết hợp tất cả điều kiện
+            return matchesSearch && matchesStatus && matchesRole;
+        });
     }
 }
